[chromium] Ensure that the compositor code which is aware of flipped status of video-textures per platform sets the flipped bit to false on Windows. https://bugs.webkit.org/show_bug.cgi?id=91562

Patch by Anantanarayanan G Iyengar <ananta@chromium.org> on 2012-07-18
Reviewed by Adrienne Walker.

No new tests. (HW video decode is still only being tested manually for orientation)

* platform/graphics/chromium/cc/CCVideoLayerImpl.cpp:
(WebCore::CCVideoLayerImpl::appendQuads):

Canonical link: https://commits.webkit.org/109487@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@123029 268f45cc-cd09-0410-ab3c-d52691b4dbfc